tests/NormalTests/paczka1/fuzzy1/63380561.err
Error in line 3: 4u4ompMr S17 19,3
Error in line 11: S77 S11 22,1
Error in line 5: 9Iad6k S17 70,6
Error in line 9: 4u4ompMr S11 27,1
Error in line 17: 4u4ompMr S77 2,3
Error in line 26: 4u4ompMr S17 85,7
Error in line 31: NBd S17 28,1
